--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,10 @@ on:
       - qa
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+    outputs:
+      build-path: ${{ steps.build.outputs.build-path }}
 
     steps:
       - name: Checkout code
@@ -23,8 +25,16 @@ jobs:
         run: npm install
 
       - name: Build Angular app
-        run: npm run build --prod
+        id: build
+        run: |
+          npm run build --prod
+        outputs:
+          build-path: './app-test/dist/app-test/browser'
 
+  configure-aws:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -32,6 +42,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build, configure-aws]
+    steps:
       - name: Deploy with Terraform
         working-directory: ./terraform/${{ github.ref_name }}
         run: |
@@ -40,4 +54,4 @@ jobs:
 
       - name: Sync S3 bucket
         run: |
-          aws s3 sync ./app-test/dist/app-test/browser/ angular-website-${{ github.ref_name }} --delete
+          aws s3 sync ${{ needs.build.outputs.build-path }} s3://angular-website-${{ github.ref_name }}/ --delete
