--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
+        working-directory: ./app-test
         run: npm install
 
       - name: Build Angular app
