--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,8 +45,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, configure-aws]
     steps:
+      - name: Print github.workspace value
+        run: echo "The value of github.workspace is: ${{ github.workspace }}"
       - name: Deploy with Terraform
-        working-directory: terraform/${{ github.ref_name }}
+        working-directory: ${{ github.workspace }}/terraform/${{ github.ref_name }}
         run: |
           terraform init
           terraform apply -auto-approve
