--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,8 +45,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, configure-aws]
     steps:
+      - name: Print current directory
+        run: pwd
+      - name: List files for debugging
+        run: ls -la terraform/environments/${{ github.ref_name }}
       - name: Deploy with Terraform
-        working-directory: ../terraform/environments/${{ github.ref_name }}
+        working-directory: terraform/environments/${{ github.ref_name }}
         run: |
           terraform init
           terraform apply -auto-approve
