--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,9 +47,16 @@ jobs:
     steps:
       - name: Print current directory
         run: pwd
-      - name: List files for debugging
-        run: ls -la
-      - name: Deploy with Terraform
+       - name: List files for debugging
+        working-directory: terraform
+        run: |
+          ls -la
+          cd environments
+          ls -la
+          cd ${{ github.ref_name }}
+          ls -la
+
+    - name: Deploy with Terraform
         working-directory: terraform/environments/${{ github.ref_name }}
         run: |
           terraform init
