--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, configure-aws]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Deploy with Terraform
         working-directory: ./terraform/environments/${{ github.ref_name }}
         run: |
