--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      build-path: ${{ steps.build.outputs.build-path }}
+      build-path: ${{ steps.build.outputs.build-path }}/app-test/dist/browser
 
     steps:
       - name: Checkout code
