--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,7 @@ jobs:
         working-directory: ./terraform/environments/${{ github.ref_name }}
         run: |
           terraform init
+          terraform plan
           terraform apply -auto-approve
 
       - name: Sync S3 bucket
