--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,10 @@ jobs:
         working-directory: ./app-test
         run: |
           npm run build --prod
+      
+      - name: List build output
+        working-directory: ./app-test
+        run: ls -R dist/browser
   configure-aws:
     runs-on: ubuntu-latest
     needs: build
@@ -62,4 +66,4 @@ jobs:
 
       - name: Sync S3 bucket
         run: |
-          aws s3 sync ${{ needs.build.outputs.build-path }} s3://angular-website-${{ github.ref_name }}/ --delete
+          aws s3 sync ${{ needs.build.outputs.build-path }} s3://angular-website-terraform2-${{ github.ref_name }}/ --delete
