--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,4 +62,4 @@ jobs:
 
       - name: Sync S3 bucket
         run: |
-          aws s3 sync ${{ steps.build.outputs.build-path }} s3://angular-website-terraform5-dev/ --delete
+          aws s3 sync . s3://angular-website-terraform6-dev/ --delete
