--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,4 +57,4 @@ jobs:
 
       - name: Sync S3 bucket
         run: |
-          aws s3 sync . s3://angular-website-terraform7-dev/ --delete
+          aws s3 sync ./dist/app-test/browser s3://angular-website-terraform7-dev/ --delete
