--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,14 +57,14 @@ jobs:
         if: env.EXISTS == 'false'
         run: |
           terraform workspace select ${{ github.ref_name }} || terraform workspace new ${{ github.ref_name }}
-          terraform plan -var="bucket-name=angular-website-terraform-${{ github.ref_name }}"
+          terraform
 
       - name: Terraform Apply
         working-directory: ./terraform/environments/${{ github.ref_name }}
         if: env.EXISTS == 'false' 
         run: |
           terraform workspace select ${{ github.ref_name }} || terraform workspace new ${{ github.ref_name }}
-          terraform apply -var="bucket-name=angular-website-terraform-${{ github.ref_name }}" -auto-approve
+          terraform apply -auto-approve
 
       - name: Sync S3 bucket
         run: |
