--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,7 @@ jobs:
         if: env.EXISTS == 'false'
         run: |
           terraform workspace select ${{ github.ref_name }} || terraform workspace new ${{ github.ref_name }}
-          terraform
+          terraform plan
 
       - name: Terraform Apply
         working-directory: ./terraform/environments/${{ github.ref_name }}
